# meshshieldai

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/agent/: README.md  pyproject.toml
apps/agent/src/agent/: event_bus.py  main.py  pipeline.py  scheduler.py  server.py  snapshot_subscriber.py  store.py
apps/agent/src/agent/agents/: allocator.py  escalator.py  justifier.py  prioritizer.py  watch_commander.py
apps/agent/src/agent/llm/: ag2_adapter.py  cassette.py
apps/agent/src/agent/nlip/: server.py
apps/agent/src/agent/tools/: intercept_sim.py  interceptors.py  operator_query.py  policy.py  snapshot.py  tavily.py
apps/agent/tests/: test_ag2_adapter.py  test_agents_allocator.py  test_agents_escalator.py  test_agents_justifier.py  test_agents_prioritizer.py  test_agents_watch_commander.py  test_event_bus.py  test_nlip_smoke.py  test_nlip_ws.py  test_pipeline.py  test_scheduler.py  test_server_events_ws.py  test_server_shell.py  test_snapshot_subscriber.py  test_store.py  test_tools_inmem.py  test_tools_intercept_sim.py  test_tools_tavily.py
apps/console/: README.md  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/console/app/: globals.css  layout.tsx  page.tsx
apps/fusion/: README.md  pyproject.toml
apps/fusion/src/fusion/: main.py  scenario_player.py  server.py  snapshot_publisher.py  store.py
apps/fusion/tests/: test_scenario_player.py  test_server_shell.py  test_server_snapshot_ws.py  test_snapshot_publisher.py  test_store.py
docs/: AG2.md  COST-CURVE.md  LEARNINGS.md  ROADMAP.md  STATS.md
docs/architecture/: 01-system-overview.md  02-agent-pipeline.md  03-nlip-integration.md  04-data-flow.md  05-frameworks-used.md
docs/runbooks/: demo-day.md
tests/: test_ci_workflow.py  test_full_stack_smoke.py  test_workspace_layout.py
(+49 files in other folders)
