[project]
name = "meshshield-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "websockets>=13",
  "httpx>=0.27",
  "ag2[openai]>=0.5",
  "nlip-server",
  "nlip-sdk",
  "cbor2>=5.6",
  "meshshield-protocol",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
